[project]
name = "uni-ai-ml"
version = "0.1.0"
requires-python = "==3.12.7"
dependencies = [
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "nbconvert>=7.16.6",
    "ruff>=0.13.1",
]

[tool.ruff]
extend-include = ["*.ipynb"]
include = ["main.ipynb"]
exclude = [".venv", "__pycache__", ".git", ".ruff_cache"]

target-version = "py312"

[tool.ruff.lint]
select = ["E", "F"]


[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pep8-naming]
ignore-names = ["e", "k", "v"]

[tool.ruff.lint.pydocstyle]
convention = "google"
